@@ -2,7 +2,7 @@
 .type __syscall_cp_asm,%function
 __syscall_cp_asm:
 	mov ip,sp
-	stmfd sp!,{r4,r5,r6,r7,lr}
+	stmfd sp!,{r4,r5,r6,r7,r8,lr}
 .global __cp_begin
 __cp_begin:
 	ldr r0,[r0]
@@ -15,7 +15,7 @@ __cp_begin:
 	svc 0
 .global __cp_end
 __cp_end:
-	ldmfd sp!,{r4,r5,r6,r7,lr}
+	ldmfd sp!,{r4,r5,r6,r7,r8,lr}
 	tst lr,#1
 	moveq pc,lr
 	bx lr
